modifiable list returned in fromJson